--- a/src/Metamoris/views/challenger/landing_page.html.twig
+++ b/src/Metamoris/views/challenger/landing_page.html.twig
@@ -5,7 +5,11 @@
     <meta name="description" content="">
     <meta name="keywords" content="">
     <meta charset="utf-8">
-    <meta name="author" content="Roman Kirichik">
+    <meta name="author" content="Metamoris">
+    <meta property="og:url" content="http://metamoris.com/challenger" />
+    <meta property="og:title" content="Metamoris North American Challenger" /> 
+    <meta property="og:image" content="http://metamoris.com/challenger/web/lp/images/fbimage.jpg" />
+    <meta property="og:description" content="Seeking only those who put submission victory before anything. As an expansion of the submission-only movement, we are proud to present the Metamoris Challenger League, a professional grappling circuit for submission fighters. " />
     <!--[if IE]>
     <meta http-equiv='X-UA-Compatible' content='IE=edge,chrome=1'><![endif]-->
     <meta name="viewport"
@@ -30,7 +34,15 @@
     <link rel="stylesheet" href="/challenger/web/lp/css/owl.carousel.css">
     <link rel="stylesheet" href="/challenger/web/lp/css/magnific-popup.css">
     <link rel="stylesheet" href="/challenger/web/lp/css/challenger-style.css">
+    <script type="text/javascript">
+        (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+            (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+                m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+        })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
+        ga('create', 'UA-64878945-1', 'auto');
+        ga('send', 'pageview');
+    </script>
 </head>
 
     <body class="appear-animate">
@@ -62,9 +74,13 @@
                             </h2>
                             
                             <div class="local-scroll">
+                            <!-- Notice Message -->
+                            <div class="alert notice" style="width:50%;">
+                                <i class="fa fa-lg fa-exclamation-triangle"></i> Please be aware, registration will become active at exactly 12PM PST on a first come first serve basis. Good luck everyone!
+                            </div>
                                 <a href="#about" class="btn btn-mod btn-w btn-medium btn-round hidden-xs">Learn More</a>
                                 <span class="hidden-xs">&nbsp;</span>
-                                <a target="_blank" href="{{ path('challenger.tabs.createaccount') }}" class="btn btn-mod btn-w btn-medium btn-round">Register Now</a>
+                                <a target="_blank" href="#" class="btn btn-mod btn-w btn-medium btn-round">Register Now</a>
                             </div>
                             
                         </div>
@@ -102,7 +118,7 @@
                             <li><a href="#how">How it works</a></li>
                             <li><a href="#rules">Rules</a></li>
                             <li><a href="#finals">Finals</a></li>
-                          <li><a href="{{ path('challenger.tabs.createaccount') }}" target="_blank">Register</a></li>
+                          <li><a href="#" target="_blank">Register</a></li>
                             
                         </ul>
                     </div>
@@ -510,7 +526,7 @@
                                            class="btn btn-mod btn-w2 btn-medium btn-round hidden-xs" style="">
                                            Learn More</a>
                                         <span class="hidden-xs">&nbsp;</span>
-                                        <a href="http://metamoris.com/challenger/web/downloads/Metamoris_challenger_Info.pdf"
+                                        <a href="http://metamoris.com/challenger/web/downloads/Metamoris_Challenger_Info.pdf"
                                            class="btn btn-mod btn-w2 btn-medium btn-round" download>Download PDF</a>
                                     </div>
                                 </div>
@@ -643,7 +659,7 @@
                     <div class="align-center">
                         <h3 class="banner-heading font-alt">Got what it takes?</h3>
                         <div class="local-scroll">
-                            <a href="{{ path('challenger.tabs.createaccount') }}" target="_blank"class="btn btn-mod btn-w btn-medium btn-round">Register Now</a>
+                            <a href="#" target="_blank"class="btn btn-mod btn-w btn-medium btn-round">Register Now</a>
                         </div>
                     </div>
                     
